[coverage:run]
omit =
    pypmi/_version.py
    pypmi/data/heuristic.py

[flake8]
doctests = True
exclude =
    .git,
    __pycache__,
    build,
    dist
ignore = W503, E402
max-line-length = 79

[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = pypmi/_version.py
versionfile_build = pypmi/_version.py
tag_prefix =
parentdir_prefix =
